--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,16 +1,22 @@
 ---
+import '../styles/global.css'
+import Header from '../components/Header.astro';
+import Hero from '../components/Hero.astro';
 
+const pageTitle = "TTOOVVAA"
 ---
 
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
+		<title>{pageTitle}</title>
 	</head>
-	<body>
-		<h1>Welcome bitch</h1>
+
+	<body class="basebody">
+		<Header />
+		<Hero />
 	</body>
+
 </html>
