added portfolio + other changes 8/30/25

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -13,25 +13,27 @@ import hero3 from "../images/hero3.png";
     <section class="hero-cards">
         <Image 
             src={hero1} 
-            alt="alt"
+            alt="Rhino/Grasshopper"
             width="250"
             height="400"
         />
         <Image 
             src={hero2} 
-            alt="alt"
+            alt="KUKA robot"
             width="250"
             height="400"
         />
         <Image 
             src={hero3} 
-            alt="alt"
+            alt="milled surface"
             width="250"
             height="400"
         />
     </section>
     <h2>I'm a computational designer and 3D artist based in NYC.</h2>
-    <p>I have a Master's degree in Computational Technology in Architecture and experience with a wide variety of tools including Rhino, Grasshopper, Blender, KUKA robots, 3D printers, Python & other programming languages, and more!</p>
+    <p>I have a Master's degree in Computational Technology in Architecture and experience with a wide variety of tools including Rhino, Grasshopper, Blender, KUKA robots, 3D printers, laser cutters, CNC machines, Python & other programming languages, and more!</p>
     <br>
-    <p>Contact me at <b>tovagold79 @ gmail dot com</b> to work with me!</p>
+    <p>Check out <b><a href='./public/assets/Tova Gold - portfolio.pdf'>my portfolio!</a></b></p>
+    <br>
+    <p>Contact me at <b><a href="mailto:tovagold79@gmail.com">tovagold79 @ gmail dot com</a></b> to work with me!</p>
 </section>
