--- a/src/components/BlogArchive.astro
+++ b/src/components/BlogArchive.astro
@@ -6,7 +6,7 @@ const allPosts = Object.values(import.meta.glob('./posts/*.md', {eager: true}));
 ---
 
 <section class="archive-container">
-    <p>This is my personal blog. I'll write about whatever I'm doing.</p>
+    <p>This is my personal blog.</p>
     <ul>
         {allPosts.map((post: any) => <li><a href={post.url}>{post.frontmatter.title}</a></li>)}
     </ul>
