--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -17,17 +17,17 @@
 
 @font-face {
     font-family: 'Figtree';
-    src: url("../../public/fonts/Figtree-Regular.ttf");
+    src: url("../../public/Figtree-Regular.ttf");
 }
 
 @font-face {
     font-family: 'Roboto-header';
-    src: url("../../public/fonts/Roboto_Condensed-Bold.ttf");
+    src: url("../../public/Roboto_Condensed-Bold.ttf");
 }
 
 @font-face {
     font-family: 'Roboto';
-    src: url("../../public/fonts/Roboto-VariableFont_wdth\,wght.ttf");
+    src: url("../../public/Roboto-VariableFont_wdth\,wght.ttf");
 }
 
 canvas {
