--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -33,7 +33,7 @@ import hero3 from "../images/hero3.png";
     <h2>I'm a computational designer and 3D artist based in NYC.</h2>
     <p>I have a Master's degree in Computational Technology in Architecture and experience with a wide variety of tools including Rhino, Grasshopper, Blender, KUKA robots, 3D printers, laser cutters, CNC machines, Python & other programming languages, and more!</p>
     <br>
-    <p>Check out <b><a href='./public/TovaGold-portfolio.pdf'>my portfolio!</a></b></p>
+    <p>Check out <b><a href='/TovaGold-portfolio.pdf'>my portfolio!</a></b></p>
     <br>
     <p>Contact me at <b><a href="mailto:tovagold79@gmail.com">tovagold79 @ gmail dot com</a></b> to work with me!</p>
 </section>
